--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ authors = ["Venkat Arun <venkatar@mit.edu>"]
 
 [dependencies]
 clap = "2.29"
-fnv = "1"
-portus = "^0.4.1"
+portus = { git = "https://github.com/ccp-project/portus", branch = "many_to_one" }
 slog = "2"
 slog-async = "2"
 slog-term = "2"
 time = "0.1"
+
+[dependencies.nom]
+version = "4"
+features = ["verbose-errors"]
